# fhir-rs

./: .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CURRENT.md  Cargo.toml  HISTORY.md  INVARIANTS.md  IR.md  LICENSE  PATTERNS.md  README.md  ROADMAP.md  STYLE.md  TASK.md  TASK.template.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
.kilo/: kilo.json
.kilo/commands/: newtask.md
compiler/fhir-backend-rust/: Cargo.toml
compiler/fhir-ir/: Cargo.toml
compiler/fhir-ir-schema/: Cargo.toml
compiler/fhir-ir-schema/src/: lib.rs
compiler/fhir-ir/src/: binding.rs  cardinality.rs  choice_type.rs  constraint.rs  datatype.rs  documentation.rs  field.rs  golden.rs  golden_test.rs  ir.rs  lib.rs  primitive.rs  reference.rs  resource.rs  specification.rs  type.rs
compiler/fhir-ir/tests/: golden_test.rs  patient.ir.yaml  snapshot_tests.rs
compiler/fhir-parser/: Cargo.toml
compiler/fhir-parser/src/: error.rs  lib.rs  loader.rs  loader_codesystem.rs  loader_resource.rs  loader_valueset.rs  (+3 more)
compiler/fhir-passes/: Cargo.toml
compiler/fhirc/: Cargo.toml
compiler/fhirc/src/: cli.rs  commands.rs  error.rs  exit_code.rs  lib.rs  main.rs
compiler/fhirc/tests/: cli_tests.rs  proptest.rs
compiler/fhirc/tests/data/: invalid.ir.yaml  patient.ir.yaml  valid.ir.yaml
compiler/fhirc/tests/snapshots/: schema_output.txt  version_output.txt
crates/fhir-json/: Cargo.toml
crates/fhir-search/: Cargo.toml
crates/fhir-server/: Cargo.toml
crates/fhir-types/: Cargo.toml
crates/fhir-validation/: Cargo.toml
crates/fhir-xml/: Cargo.toml
macros/fhir-macros/: Cargo.toml
(+6 files in other folders)
