[package]
name = "fhirc"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the FHIR compiler"

[[bin]]
name = "fhirc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fhir-ir = { path = "../fhir-ir" }
fhir-ir-schema = { path = "../fhir-ir-schema" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"